# actions-test

./: README.md  test.txt
e2e/ai_insights/: README.md  pyproject.toml
e2e/ai_insights/latticeflow_e2e_ai_insights.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
e2e/ai_insights/testData/: testdata.xlsx
e2e/ai_insights/tests/: _TC_006_demo.py  allpage_TC_001_Verify_the_Resources_drop_down_and_links_redirects_to_appropriate_urls.py  conftest.py  pytest.ini  report.html  test_Content_TC_001_Public_Education_Article_Without_Login.py  test_Content_TC_002_Registered_Model_Report_Without_Login.py  test_Content_TC_003_Registered_Education_Article_After_Login.py  test_ModelReport_TC_002_Verify_Summary_Report_Preview_for_Not_Logged_In_Users.py  test_ModelReport_TC_003_Verify_Summary_Report_Full_Access_for_Logged_In_Users.py  test_availabilityboard_TC_001_Verify_Model_Reports_tab_loads_correctly.py  test_availabilityboard_TC_002_Verify_default_sorting_by_Announcement_Date_descending.py  test_availabilityboard_TC_003_Verify_all_summary_and_risk_report_links.py  test_availabilityboard_TC_004_Verify_custom_request_links_to_Support_Page.py  test_availabilityboard_TC_005_Verify_search_functionality.py  test_availabilityboard_TC_008_Verify_rows_per_page_selection_works.py  test_availabilityboard_TC_010_Verify_Interested_action_prompts_login_when_not_logged_in.py  test_availabilityboard_TC_011_Verify_Interested_action_after_login_records_interest.py  test_availabilityboard_TC_013_Verify_Custom_Request_option_displayed_after_login.py  (+85 more)
e2e/ai_insights/utils/: helpers.py  (+1 more)
(+18 files in other folders)
